DuPont DevSB/src/objects/FF_PSA_Rebilling_Internal_Order__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This is a rebilling internal order used in Financial Force PSA</description>
    <fields>
        <fullName>Plant_Code_of_LE__c</fullName>
        <label>Plant Code of LE</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_LE_Code__c</fullName>
        <label>Project LE Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rebill_Internal_Order__c</fullName>
        <label>Rebill Internal Order</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resource_LE_Code__c</fullName>
        <label>Resource LE Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resource_LE__c</fullName>
        <label>Resource LE</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>FF PSA Rebilling Internal Order Mapping</label>
</CustomObject>